Changes from papeeria.
Actualizaciones finales para ambos datasets

--- a/latex/references.bib
+++ b/latex/references.bib
@@ -1,3 +1,39 @@
+@misc{wine_quality,
+  author       = {Cortez, Paulo, Cerdeira, A., Almeida, F., Matos, T., and Reis, J.},
+  title        = {{Wine Quality}},
+  year         = {2009},
+  howpublished = {UCI Machine Learning Repository},
+  note         = {{DOI}: https://doi.org/10.24432/C56S3T}
+}
+
+@misc{alz_dataset,
+title={Alzheimer's Disease Dataset},
+url={https://www.kaggle.com/dsv/8668279},
+DOI={10.34740/KAGGLE/DSV/8668279},
+publisher={Kaggle},
+author={Rabie El Kharoua},
+year={2024}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @article{Rana22,
   author={Rana, Md Shohel and Nobi, Mohammad Nur and Murali, Beddhu and Sung, Andrew H.},
   journal={IEEE Access}, 
